--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNOS1seT1Z+AR2BScbWJQl1",
+      "authorship_tag": "ABX9TyPtob2sXvJFrb9TkSsGuUCz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,7 +78,7 @@
         "地の文\n",
         "地の文2"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -136,7 +136,7 @@
         "/* コメント4 */\n",
         "</script>"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -201,7 +201,7 @@
         "地の文\n",
         "<div>地の文</div>"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -305,7 +305,7 @@
         "    </li>\n",
         "</ol>"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -358,7 +358,7 @@
         "%%html\n",
         "<p>My cat is <strong>very grumpy.</p>とか</strong>"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -393,7 +393,7 @@
         "<p>fourth</p><p>fifth</p><p>sixth</p> <!-- ブロック要素 -->\n",
         "<div>fourth</div><div>fifth</div><div>sixth</div> <!-- ブロック要素 -->\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -419,24 +419,22 @@
         "id": "eS5B0LXA2K4w",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 121
         },
-        "outputId": "90131746-3182-43b6-8f16-dcde03fcae31"
+        "outputId": "d2476b94-36fe-4499-c14e-ae9a64889599"
       },
       "source": [
-        "# 画像の挿入\n",
+        "# 画像の挿入 img\n",
         "%%html\n",
-        "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" \n",
-        "width=\"100\">\n"
+        "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" width=\"100\">\n"
       ],
-      "execution_count": 7,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
             "text/html": [
-              "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" \n",
-              "width=\"100\">"
+              "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" width=\"100\">"
             ],
             "text/plain": [
               "<IPython.core.display.HTML object>"
@@ -449,13 +447,36 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "Ca4Iu-09pfrs"
+        "id": "fw6us2dwSGnM",
+        "outputId": "5e79a861-8300-449f-e5d3-4438269d1c11",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 121
+        }
       },
       "source": [
-        "# いまここ\r\n",
-        "svg の例を入れたい。"
+        "# 画像の挿入 SVG\r\n",
+        "%%html\r\n",
+        "<svg width=\"100\" height=\"100\" >  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"grey\"\" stroke-width=\"4\" fill=\"lightsalmon\" />  <circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" /></svg>"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<svg width=\"100\" height=\"100\" >  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"grey\"\" stroke-width=\"4\" fill=\"lightsalmon\" />  <circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" /></svg>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
@@ -473,7 +494,7 @@
         "%%html\n",
         "<p>A link to my <a href=\"https://www.mozilla.org/\" title=\"The Mozilla homepage\" target=\"_blank\">favourite website</a>.</p>"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -514,7 +535,7 @@
         "outputId": "3e1c46cc-566d-4165-dcd0-755e849c78b6"
       },
       "source": [
-        "# 真偽値属性と略記法\n",
+        "# 真偽値属性と略記法 disabled みたいなやつ\n",
         "%%html\n",
         "<style>\n",
         "    :disabled {\n",
@@ -525,7 +546,7 @@
         "<input type=\"text\" disabled value=\"not available\">\n",
         "<input type=\"text\" value=\"Enter something\" title=\"the\">"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -566,7 +587,7 @@
         "–   &ndash;\n",
         "—  &mdash;"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -597,7 +618,7 @@
         "/links/rush/images/albums/sectors/sector2-movingpictures-cover-s.jpg\"\n",
         "width=\"100\">"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -652,7 +673,7 @@
         "    }\n",
         "</style>"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -677,6 +698,15 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-Awtts6OTsD-"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -722,7 +752,7 @@
         "  </body>\n",
         "</html>"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -780,7 +810,7 @@
         "    </fieldset>\n",
         "</form>"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -868,7 +898,7 @@
         "\n",
         "<p>hummus is suitable for freezing; you should thaw it and use it within a couple of months.</p>"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -942,7 +972,7 @@
         "<p>I am a policewoman and my name is Trish.</p>\n",
         "<p>My legs are made of cardboard and I am married to a fish.</p>"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -976,7 +1006,7 @@
         "%%html\n",
         "<span style=\"font-size: 32px; margin: 21px 0;\">Is this a top level heading?</span>"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1022,7 +1052,7 @@
         "    <p class=\"fakeh1\">Is thsi a top level heading?</p>\n",
         "</body>"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1082,7 +1112,7 @@
         "    <li>hummus</li>\n",
         "</ul>"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1125,7 +1155,7 @@
         "    <li>The school is on your right, 300 meters up the road</li>\n",
         "</ol>"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1174,7 +1204,7 @@
         "    </li>\n",
         "</ol>"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1231,7 +1261,7 @@
         "    <em>green jumpsuits</em> and <em>silly hats</em>, and seemed to be having a whale of a time. If anyone has\n",
         "    <strong>any</strong> information about this incident, please contact the police <strong>now</strong>.</p>"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1272,7 +1302,7 @@
         "    <em>green jumpsuits</em> and <em>silly hats</em>, and seemed to be having a whale of a time. If anyone has\n",
         "    <span style=\"font-size: 150%\">any</span> information about this incident, please contact the police <span style=\"font-size: 150%\">now</span>.</p>"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1335,7 +1365,7 @@
         "  </li>\n",
         "</ol>"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1411,7 +1441,7 @@
         "    <dd>ドラマで、登場人物が観客のみに対し、ユーモアやドラマチックな効果を狙ってコメントをします。これは通常は感情や、考えや、追加の背景情報です。</dd>\n",
         "</dl>"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1463,7 +1493,7 @@
         " <p>It does not matter how slowly you go as long as you do not stop.</p>\n",
         "</blockquote>"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1507,7 +1537,7 @@
         "\n",
         "<p><abbr title=\"National Aeronautics and Space Administration\">NASA</abbr> sure does some exciting work.</p>"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1548,7 +1578,7 @@
         "<p>Caffeine's chemical formula is C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>.</p>\n",
         "<p>If x<sup>2</sup> is 9, x must equal 3 or -3.</p>"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1598,7 +1628,7 @@
         "<samp>PING mozilla.org (63.245.215.20): 56 data bytes\n",
         "64 bytes from 63.245.215.20: icmp_seq=0 ttl=40 time=158.233 ms</samp></pre>"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1645,7 +1675,7 @@
         "サイドバー: <aside>; <main> の中に置かれることがよくあります。\n",
         "フッター: <footer>."
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1737,7 +1767,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2071,7 +2101,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2335,7 +2365,7 @@
         "    </span>.\n",
         "</p>"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2401,7 +2431,7 @@
         "    <p>Total cost: $237.89</p>\n",
         "</div>"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2449,7 +2479,7 @@
         "    But her structure was bad, her semantics were sad<br>\n",
         "    and her markup didn't read very well.</p>"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2488,7 +2518,7 @@
         "<p>その間、ハリーは家に座って、彼の使用料の声明を見つめてそして魅惑の苦痛の手紙が彼の窓を通って飛んで、そして彼の膝に着陸したときに次のスピンオフシリーズが出るだろう時を考えました。彼はそれをぼんやりと読んでため息をついた。「その時は仕事に戻るほうがいい」と彼は言った。\n",
         "</p>"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2678,7 +2708,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3131,7 +3161,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3385,7 +3415,7 @@
         "<img src=\"images/dinosaur.jpg\"\n",
         "     alt=\"恐竜の画像がはいるハズ。ごめん。\">"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3424,7 +3454,7 @@
         " height=\"171\"\n",
         " title=\"A T-Rex on display in the Manchester University Museum\">"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3488,7 +3518,7 @@
         "  <figcaption>マンチェスター大学博物館に展示されている T-Rex。</figcaption>\n",
         "</figure>"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3533,7 +3563,7 @@
         "    <figcaption>サッポロ一番(さっぽろいちばんしおらーめん)</figcaption>\n",
         "</figure>"
       ],
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3570,7 +3600,7 @@
         "<iframe src=\"https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d51891.663190924686!2d139.80105967163098!3d35.62208193792607!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1609133463998!5m2!1sja!2sjp\" width=\"400\" height=\"300\" frameborder=\"0\" style=\"border:0;\" allowfullscreen=\"\" aria-hidden=\"false\" tabindex=\"0\"></iframe>\n",
         "</iframe>"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3606,7 +3636,7 @@
         "        allowfullscreen sandbox>\n",
         "</iframe>"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3654,7 +3684,7 @@
         "  <circle cx=\"150\" cy=\"100\" r=\"90\" fill=\"blue\" />\n",
         "</svg>\n"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3696,7 +3726,7 @@
         "    </text>\n",
         "</svg>"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3743,7 +3773,7 @@
         "    </text>\n",
         "</svg>"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3805,7 +3835,7 @@
         "%%%html\n",
         "<style>html {font-family: sans-serif;}table {border-collapse: collapse;border: 2px solid rgb(200, 200, 200);letter-spacing: 1px;font-size: 0.8rem;}td,th {border: 1px solid rgb(190, 190, 190);padding: 10px 20px;}th {background-color: rgb(235, 235, 235);}td {text-align: center;}tr:nth-child(even) td {background-color: rgb(250, 250, 250);}tr:nth-child(odd) td {background-color: rgb(245, 245, 245);}caption {padding: 10px;}</style>"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3843,7 +3873,7 @@
         "    <td>I'm your fourth cell.</td>\n",
         "</table>"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3896,7 +3926,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3981,7 +4011,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4079,7 +4109,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4202,7 +4232,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4330,7 +4360,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4433,7 +4463,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4572,7 +4602,7 @@
         "    </tbody>\n",
         "</table>"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4700,7 +4730,7 @@
         "    </tr>\n",
         "</table>"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4799,7 +4829,7 @@
         "<h1>My First Heading</h1>\n",
         "<p>My first paragraph.</p>"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4833,7 +4863,7 @@
         "%%html\r\n",
         "<a href=\"\">Ctrlを押しながらクリックしてみよう!!!!</a>"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
